--- a/Syncr/sync/templates/sync/job/detail.html
+++ b/Syncr/sync/templates/sync/job/detail.html
@@ -23,7 +23,7 @@
 {% if isDryRun %}
 <figure class="rounded-lg col-span-6 flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
     <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
-        <h3 class="text-lg font-semibold text-red-200">This job is a DryRun, no files were transferred.</h3>
+        <h3 class="text-lg font-semibold text-red-200">This job is a DryRun, no files were transferred and the bandwidth is not representative.</h3>
     </blockquote>   
 </figure>
 {% endif %}
